--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -1,16 +1,52 @@
-<div id="whole-nav" class="navbar row d-flex justify-content-center">
-  <div class="col-4" id="nav-body">
-    <div class="row d-flex justify-content-around align-items-center">
-      <div class="col-2">
+<div id="whole-nav" class="nav row d-flex ">
+  <div class="row d-flex" id="nav-body">
+    <div class="col-6 d-flex justify-content-space-between align-items-center">
+      <div class="col-3">
         <button class="nav-buttons"><a href="#home-content">Home</a></button>
       </div>
-      <div class="col-2">
+      <div class="col-3">
         <button class="nav-buttons"><a href="#projects">Projects</a></button>
       </div>
-      <div class="col-2">
+
+      <div class="col-4">
         <button id="contact-me-button" class="nav-buttons">
           <a href="#contactMe">Contact Me</a>
         </button>
+      </div>
+      <div class="col-3">
+        <button id="nav-buttons" class="nav-buttons">
+          <a href="/reviews">Reviews</a>
+        </button>
+      </div>
+    </div>
+    <div class="col-6 d-flex justify-content-end align-items-center">
+      <div *ngIf="!isLogin" class="col-2">
+        <button id="login-button" class="nav-buttons">
+          <a href="/login">Login</a>
+        </button>
+      </div>
+      <div  *ngIf="!isLogin" class="col-2">
+        <button id="sign-up-button" class="nav-buttons">
+          <a href="/sign-up">Sign-Up</a>
+        </button>
+      </div>
+      <div  *ngIf="isLogin" class="col-2">
+        <button class="logout-button" (click)="logout()">
+          Logout
+        </button>
+      </div>
+      <div  *ngIf="isLogin" class="col-2">
+        <cl-image public-id="{{ currentUser.photo }}">
+          <cl-transformation
+            gravity="face"
+            height="65"
+            width="65"
+            crop="fill"
+            aspect-ratio="1.0"
+            
+          ></cl-transformation>
+          <cl-transformation radius="max"></cl-transformation>
+        </cl-image>
       </div>
     </div>
   </div>
@@ -44,7 +80,7 @@
                 <br>
                 My dream and why I am pursuing this career is “To become a senior
                 full stack developer so that when I become a penetration tester
-                I will be one step ahead as I will know the flaws in a
+                I will be one step ahead as I will know the common flaws in a
                 website/server”
               </p>
             </div>
