--- a/src/app/new-review/new-review.component.html
+++ b/src/app/new-review/new-review.component.html
@@ -1,5 +1,10 @@
 <div class="container">
   <div class="row d-flex justify-content-center">
+    <div class="col-12 d-flex justify-content-start">
+      <button routerLink="/reviews" class="back btn btn-light">
+        <i class="fa fa-arrow-left"></i>
+      </button>
+    </div>
     <div class="col-12 d-flex justify-content-center">
       <span>New Review</span>
     </div>
@@ -15,7 +20,7 @@
           ></textarea>
         </div>
         <div class="col-12 d-flex justify-content-center">
-          <button type="submit">submit</button>
+          <button class="submit" type="submit">submit</button>
         </div>
       </div>
     </form>
