--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -14,21 +14,15 @@
         </button>
       </div>
       <div class="col-3">
-        <button id="nav-buttons" class="nav-buttons">
-          <a href="/reviews">Reviews</a>
-        </button>
+        <button routerLink='/reviews' id="nav-buttons" class="nav-buttons">Reviews</button>
       </div>
     </div>
     <div class="col-6 d-flex justify-content-end align-items-center">
       <div *ngIf="!isLogin" class="col-2">
-        <button id="login-button" class="nav-buttons">
-          <a href="/login">Login</a>
-        </button>
+        <button routerLink='/login' id="login-button" class="nav-buttons">Login</button>
       </div>
       <div  *ngIf="!isLogin" class="col-2">
-        <button id="sign-up-button" class="nav-buttons">
-          <a href="/sign-up">Sign-Up</a>
-        </button>
+        <button routerLink='/sign-up' id="sign-up-button" class="nav-buttons">Sign-Up</button>
       </div>
       <div  *ngIf="isLogin" class="col-2">
         <button class="logout-button" (click)="logout()">
@@ -43,7 +37,7 @@
             width="65"
             crop="fill"
             aspect-ratio="1.0"
-            
+
           ></cl-transformation>
           <cl-transformation radius="max"></cl-transformation>
         </cl-image>
