--- a/src/app/reviews/reviews.component.html
+++ b/src/app/reviews/reviews.component.html
@@ -1,50 +1,69 @@
 <div id="background" class="container container-2">
-    <div class="row d-flex justify-content-center">
-      <div class="col-12 d-flex justify-content-start">
-        <a href="/"><button>Back</button></a>
-      </div>
-      <div class="col-12 d-flex justify-content-center">
-        <h1>Reviews</h1>
-      </div>
-      <div class="col-12 d-flex justify-content-center">
-        <a href="/reviews/create"><button>Create New</button></a>
-      </div>
-        <div *ngFor="let r of reviews" class="comments row d-flex justify-content-center">
-          <div class="comments2 row d-flex justify-content-center">
-                <div class="col-2 d-flex justify-content-start align-items-center " style="border-right: 2px solid white;">
-                  <cl-image public-id="{{ r.user.photo }}">
-                    <cl-transformation
-                      gravity="face"
-                      height="50"
-                      width="50"
-                      crop="fill"
-                      aspect-ratio="1.0"
-
-                    ></cl-transformation>
-                    <cl-transformation radius="max"></cl-transformation>
-                  </cl-image>
-                </div>
-                <div class="col-6 d-flex justify-content-center" style="border-right: 2px solid white;">
-                  <p class="card-title">{{ r.text }}</p>
-                </div>
-                <div class="col-4 d-flex justify-content-center">
-                  <div class="row d-flex justify-content-center">
-                    <div class="col-12 d-flex justify-content-center">
-                      <p id="postedby">posted by: {{ r.user.name }}</p>
-                    </div>
-                      <div  *ngIf="currentUser?._id == r.user._id " class="col-12 d-flex justify-content-space-between">
-                        <button class="card-button" [routerLink]="['edit/' + r._id]">
-                          <span class="card-span">Edit</span>
-                        </button>
-                        <button class="card-button" (click)="deleteReview(r._id)">
-                          <span class="card-span">Delete</span>
-                        </button>
-                      </div>
-
-                  </div>
-                </div>
-
+  <div class="row d-flex justify-content-center">
+    <div class="col-12 d-flex justify-content-start">
+      <a href="/"
+        ><button class="back btn btn-light">
+          <i class="fa fa-arrow-left"></i></button
+      ></a>
+    </div>
+    <div class="col-12 d-flex justify-content-center">
+      <h1>Reviews</h1>
+    </div>
+    <div class="col-12 d-flex justify-content-center">
+      <a href="/reviews/create"><button class="btn btn-lg btn-primary">Create New</button></a>
+    </div>
+    <div
+      *ngFor="let r of reviews"
+      class="comments row d-flex justify-content-center"
+    >
+      <div class="comments2 row d-flex justify-content-center">
+        <div
+          class="col-2 d-flex justify-content-start align-items-center"
+          style="border-right: 2px solid white"
+        >
+          <cl-image public-id="{{ r.user.photo }}">
+            <cl-transformation
+              gravity="face"
+              height="50"
+              width="50"
+              crop="fill"
+              aspect-ratio="1.0"
+            ></cl-transformation>
+            <cl-transformation radius="max"></cl-transformation>
+          </cl-image>
+        </div>
+        <div
+          class="col-6 d-flex justify-content-center"
+          style="border-right: 2px solid white"
+        >
+          <p class="card-title">{{ r.text }}</p>
+        </div>
+        <div class="col-4 d-flex justify-content-center">
+          <div class="row d-flex justify-content-center">
+            <div class="col-12 d-flex justify-content-center">
+              <p id="postedby">posted by: {{ r.user.name }}</p>
+            </div>
+            <div
+              *ngIf="currentUser?._id == r.user._id"
+              class="col-12 d-flex justify-content-space-between"
+            >
+              <button
+                class="btn btn-sm btn-primary card-button"
+                style="margin-right: 5px"
+                [routerLink]="['edit/' + r._id]"
+              >
+                <i class="fa fa-pencil" aria-hidden="true"></i>
+              </button>
+              <button
+                class="btn btn-sm btn-danger delete card-button"
+                (click)="deleteReview(r._id)"
+              >
+                <i class="fa fa-trash" aria-hidden="true"></i>
+              </button>
+            </div>
           </div>
         </div>
+      </div>
     </div>
+  </div>
 </div>
