--- a/src/app/sign-up/sign-up.component.css
+++ b/src/app/sign-up/sign-up.component.css
@@ -2,7 +2,9 @@
   margin-top: 80px;
   margin-bottom: 80px;
 }
-
+h2{
+  margin-top: 15px;
+}
 .form-signin {
   max-width: 380px;
   padding: 15px 35px 45px;
@@ -47,7 +49,7 @@ input[type="password"] {
   border-top-right-radius: 0;
 }
 
-button {
+.submit {
   background-color: #eee;
   border: none;
   padding: 1rem;
@@ -58,20 +60,34 @@ button {
   color: rgb(0, 0, 0);
   box-shadow: 0 0.4rem #dfd9d9;
   cursor: pointer;
-}
+ }
 
-button:active {
+ .submit:active {
   color: white;
   box-shadow: 0 0.2rem #f1db15;
   transform: translateY(0.2rem);
-}
+ }
 
-button:hover:not(:disabled) {
+ .submit:hover:not(:disabled) {
   background: #f1db15;
   color: white;
-}
 
-button:disabled {
+ }
+
+ .submit:disabled {
   cursor: auto;
   color: grey;
+ }
+.btn{
+border: 2px solid black;
+}
+ .fa-arrow-left{
+  transition: all 0.3s ease 0s;
+}
+.fa-arrow-left:hover{
+  transform: translateX(-7px);
+}
+
+.back{
+  margin-top: 6px;
 }
