--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -6,7 +6,7 @@
           <i class="fa fa-arrow-left"></i>
         </button>
       </div>
-      <h2 class="form-signin-heading">Please Login</h2>
+      <h2 class="form-signin-heading">Login</h2>
       <input
         class="form-control"
         type="email"
