--- a/src/app/sign-up/sign-up.component.html
+++ b/src/app/sign-up/sign-up.component.html
@@ -6,7 +6,7 @@
           <i class="fa fa-arrow-left"></i>
         </button>
       </div>
-      <h2 class="form-signin-heading">Please Sign-Up</h2>
+      <h2 class="form-signin-heading">Sign-Up</h2>
       <input
         type="file"
         name="photo"
