--- a/src/app/edit-review/edit-review.component.css
+++ b/src/app/edit-review/edit-review.component.css
@@ -6,6 +6,7 @@ border-radius: 15px;
   height: 400px;
   width: 400px;
   background-color: rgb(82, 76, 76);
+  margin-bottom: 350px;
 }
 
 textarea{
